Deprecation warnings cleanup